[package]
name = "memflow-py"
version = "0.1.6"
authors = ["Dan Killinger <git@dank.anonaddy.com>"]
edition = "2021"
keywords = ["memflow", "python"]
description = "Python package for memflow"
repository = "https://github.com/memflow/memflow-py/"
license = "MIT"

[lib]
name = "memflow"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = [
    "extension-module",
    "abi3-py37",
    "macros",
] }
pyo3-log = "0.9"
memflow = { version = "=0.2.0-beta11", features = ["plugins", "dummy_mem"] }
cglue = "0.2"
thiserror = "1.0"
indexmap = "2.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
