[project]
name = "memflow"
version = "0.2.0"
authors = [{ name = "Dan Killinger", email = "git@dank.anonaddy.com" }]
description = "Physical memory introspection framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Operating System",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/memflow/memflow-py"
"Bug Tracker" = "https://github.com/memflow/memflow-py/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[project.optional-dependencies]
dev = ["pytest==7.1", "black==22.10"]
